--- a/js/_tasks/ul_to_tree/ul_to_tree.html
+++ b/js/_tasks/ul_to_tree/ul_to_tree.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <style type="text/css">
-    td { vertical-align: top; }
-    code { color: DarkRed; background-color: FloralWhite; padding: .25em .15em; }
+    table { background-color: Azure; }
+    table td { vertical-align: top; background-color: white; }
+    code { color: FireBrick; background-color: FloralWhite; padding: .1em; }
+    body { font-size: 2em; }
   </style>
   <script type="text/javascript"></script>
   <link rel="stylesheet" type="text/css" href="css/index.css">
@@ -24,7 +26,7 @@
     </tr>
     <tr>
       <td>
-<ul style="width: 25%;">
+<ul style="width: 65%;">
   <li>Asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd</li>
   <li>
     Asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2
@@ -50,7 +52,7 @@
 
       </td>
       <td>
-<ul style="width: 25%;" class="ul_to_tree">
+<ul style="width: 65%;" class="ul_to_tree">
   <li>Asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd</li>
   <li>
     Asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2
@@ -76,7 +78,7 @@
 
       </td>
       <td>
-<ul style="width: 25%;" class="ul_to_tree ul_to_tree-dropdown">
+<ul style="width: 65%;" class="ul_to_tree ul_to_tree-dropdown">
   <li>Asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd</li>
   <li>
     Asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2
@@ -109,85 +111,85 @@
   <tbody>
     <tr>
       <td></td>
-      <td></td>
-      <td></td>
+      <td>Добавляем класс <code>ul_to_tree2</code></td>
+      <td>Добавляем уточняющий класс <code>ul_to_tree2-dropdown</code></td>
     </tr>
     <tr>
       <td>
-<ul style="width: 25%;">
-  <li>Asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd</li>
+<ul style="width: 65%;">
+  <li><i></i><div>Asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd</div></li>
   <li>
-    Asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2
+    <i></i><div>Asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2</div>
     <ul>
-      <li>Zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc</li>
+      <li><i></i><div>Zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc</div></li>
     </ul>
   </li>
   <li>
-    Asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3
+    <i></i><div>Asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3</div>
     <ul>
-      <li>Zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2</li>
+      <li><i></i><div>Zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2</div></li>
       <li>
-        Zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3
+        <i></i><div>Zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3</div>
         <ul>
-          <li>Qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1</li>
-          <li>Qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2</li>
+          <li><i></i><div>Qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1</div></li>
+          <li><i></i><div>Qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2</div></li>
         </ul>
       </li>
     </ul>
   </li>
-  <!-- <li>Foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo</li> -->
+  <!-- <li><i></i><div>Foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo</div></li> -->
 </ul>
 
       </td>
       <td>
-<ul style="width: 25%;" class="ul_to_tree2">
-  <li>Asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd</li>
+<ul style="width: 65%;" class="ul_to_tree2">
+  <li><i></i><div>Asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd</div></li>
   <li>
-    Asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2
+    <i></i><div>Asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2</div>
     <ul>
-      <li>Zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc</li>
+      <li><i></i><div>Zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc</div></li>
     </ul>
   </li>
   <li>
-    Asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3
+    <i></i><div>Asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3</div>
     <ul>
-      <li>Zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2</li>
+      <li><i></i><div>Zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2</div></li>
       <li>
-        Zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3
+        <i></i><div>Zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3</div>
         <ul>
-          <li>Qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1</li>
-          <li>Qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2</li>
+          <li><i></i><div>Qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1</div></li>
+          <li><i></i><div>Qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2</div></li>
         </ul>
       </li>
     </ul>
   </li>
-  <!-- <li>Foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo</li> -->
+  <!-- <li><i></i><div>Foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo</div></li> -->
 </ul>
 
       </td>
       <td>
-<ul style="width: 25%;" class="ul_to_tree ul_to_tree-dropdown">
-  <li>Asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd</li>
+<ul style="width: 65%;" class="ul_to_tree2 ul_to_tree2-dropdown">
+  <li><i></i><div>Asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd asd</div></li>
   <li>
-    Asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2
+    <div>Asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2 asd2</div><i></i>
     <ul>
-      <li>Zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc</li>
+      <li><i></i><div>Zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc zxc</div></li>
     </ul>
   </li>
   <li>
-    Asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3
+    <i></i><div>Asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3 asd3</div>
     <ul>
-      <li>Zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2</li>
+      <li><i></i><div>Zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2 zxc2</div></li>
       <li>
-        Zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3
+        <i></i><div>Zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3 zxc3</div>
         <ul>
-          <li>Qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1</li>
-          <li>Qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2</li>
+          <li><i></i><div>Qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1 qwe1</div></li>
+          <li><i></i><div>Qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2 qwe2</div></li>
         </ul>
       </li>
     </ul>
   </li>
-  <!-- <li>Foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo</li> -->
+  <!-- <li><i></i><div>Foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo foo</div></li> -->
 </ul>
 
       </td>
