--- a/js/_tasks/ul_to_tree/ul_to_tree.html
+++ b/js/_tasks/ul_to_tree/ul_to_tree.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <style type="text/css">
+    html, body { margin: 0; padding: 0; }
     table { background-color: Azure; }
     table td { vertical-align: top; background-color: white; }
     code { color: FireBrick; background-color: FloralWhite; padding: .1em; }
