--- a/js/_tasks/dynamic_form/index.html
+++ b/js/_tasks/dynamic_form/index.html
@@ -93,6 +93,12 @@
               <label>Метка</label>
               <input type="text" name="label" class="form-control">
             </div>
+            <div class="form-check">
+              <label class="form-check-label user-select-none" role="button">
+                <input class="form-check-input" type="checkbox" value="1">
+                Обязательное
+              </label>
+            </div>
           </div>
           <div class="ms-2">
             <button type="button" class="btn btn-sm btn-outline-danger user-select-none dynamic_form-remove" title="Удалить">
@@ -110,6 +116,12 @@
               <label>Метка</label>
               <input type="text" name="label" class="form-control">
             </div>
+            <div class="form-check">
+              <label class="form-check-label user-select-none" role="button">
+                <input class="form-check-input" type="checkbox" value="1">
+                Обязательное
+              </label>
+            </div>
           </div>
           <div class="ms-2">
             <button type="button" class="btn btn-sm btn-outline-danger user-select-none dynamic_form-remove" title="Удалить">
@@ -126,6 +138,12 @@
             <div class="form-group mt-2">
               <label>Метка</label>
               <input type="text" name="label" class="form-control">
+            </div>
+            <div class="form-check mt-2">
+              <label class="form-check-label user-select-none" role="button">
+                <input class="form-check-input" type="checkbox" value="1">
+                Обязательное
+              </label>
             </div>
             <div class="form-group mt-2">
               <label>Подсказка</label>
@@ -161,6 +179,12 @@
             <div class="form-group mt-2">
               <label>Метка</label>
               <input type="text" name="label" class="form-control">
+            </div>
+            <div class="form-check mt-2">
+              <label class="form-check-label user-select-none" role="button">
+                <input class="form-check-input" type="checkbox" value="1">
+                Обязательное
+              </label>
             </div>
           </div>
           <div class="ms-2">
@@ -209,6 +233,12 @@
             <div class="form-group mt-2">
               <label>Метка</label>
               <input type="text" name="label" class="form-control">
+            </div>
+            <div class="form-check mt-2">
+              <label class="form-check-label user-select-none" role="button">
+                <input class="form-check-input" type="checkbox" value="1">
+                Обязательное
+              </label>
             </div>
             <div class="form-group mt-2 dynamic_form-options">
               <span class="user-select-none">
